<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    tools:context=".MainActivity">

<Button
android:id="@+id/btnXmlLayout"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:text="@string/xml_layout" />

<Button
android:id="@+id/btnCommonControls"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_marginTop="12dp"
android:text="@string/common_controls" />

<Button
android:id="@+id/btnAdvancedControls"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_marginTop="12dp"
android:text="@string/advanced_controls" />

<Button
android:id="@+id/btnAdapterDemo"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_marginTop="12dp"
android:text="@string/adapter_adapterView" />

    </LinearLayout>
